# Sara

./: .dockerignore  .env.example  .gitignore  .pyproject.toml.~undo-tree~  .requirements.txt.~undo-tree~  .venv.sh.~undo-tree~  CITATION.cff  Dockerfile  LICENSE  README.es.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  venv.sh
docs/design/: README.nd  immutable-datasets.md  minimal-working-example.md  sql-first-analytics.md  why-duckdb.md  why-parquet.md
docs/work/: cli-skeleton.md
drafts/: 00-estrategia.md  00-plataforma.md  MVP-001.md  core-0000.md  core-0001.md  future-0001.md  modelos-00.md  operaciones-run-001.md  pataforma-00.md  roadmap-0001.md  roadmap-producto-00.md
drafts/datasets/: ideas-001.md  inmutabilidad-01.md
src/: README.cli.md
src/sara/: __init__.py
src/sara/cli/: __init__.py  app.py
src/sara/config/: setting.py
src/sara/core/: __init__.py  models.py
src/sara/engine/: __init__.py  duck.py
src/sara/orchestrator/: __init__.py  service.py
src/sara/storage/: __init__.py  layaout.py  repository.py
